deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-api-deployment
  labels:
    app: rest-api
spec:
  replicas: 3 # enable HA
  selector:
    matchLabels:
      app: rest-api
  template:
    metadata:
      labels:
        app: rest-api
    spec:
      # Enables run on Openshift
      securityContext:
        runAsNonRoot: true
      containers:
        - name: rest-api
          image: ghcr.io/alexdellabruna/rest-api-service:latest
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          volumeMounts:
            - name: rest-api-volume
              mountPath: /app/db_data
          ports:
            - containerPort: 8080
      volumes:
        - name: rest-api-volume
          persistentVolumeClaim:
            claimName: rest-api-pvc
