deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rest-api-ingress
spec:
  rules:
    - host: rest-api.domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rest-api-service
                port:
                  number: 80
